# Topsis

./: README.md  data.csv  implementation.py  result.csv  topsis.py
Topsis-Chirag-102303003/: README.md  data.xlsx  pyproject.toml  result.xlsx  setup.cfg
Topsis-Chirag-102303003/Topsis_Chirag_102303003.egg-info/: PKG-INFO  SOURCES.txt
Topsis-Chirag-102303003/topsis_chirag_102303003/: cli.py  topsis.py
