[metadata]
name = Topsis-Chirag-102303003
version = 1.0.0
author = Chirag Gupta
author_email = chirag.gupta.2120@gmail.com
description = TOPSIS implementation as a python package with CLI
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platforms = any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pandas
    numpy
python_requires = >=3.8

[options.entry_points]
console_scripts =
    topsis = topsis_chirag_102303003.cli:main
